fixed spacing when searching, search bar no longer goes outside its boundaries

--- a/app/src/styles/flights.css
+++ b/app/src/styles/flights.css
@@ -43,11 +43,12 @@
   min-width: 200px;
   transition: all 0.3s ease-in-out;
   z-index: 10;
+  transform: translateY(20px);
 }
 
 .search-bar-top {
-  padding-top: 20px;
-  margin-top: 20px;
+  padding-top: 10px;
+  margin-top: 10px;
   width: 50%;
 }
 
@@ -123,21 +124,25 @@
 }
 
 .loading {
+  margin-top: 20px;
   padding: 10px 20px;
   background-color: #f8f9fa;
   border-radius: 4px;
   margin: 10px 0;
   color: #666;
   text-align: center;
+  transform: translateY(30px);
 }
 
 .error {
+  margin-top: 20px;
   padding: 10px 20px;
   background-color: #f8d7da;
   border-radius: 4px;
   margin: 10px 0;
   color: #721c24;
   text-align: center;
+  transform: translateY(30px);
 }
 
   @media only screen and (max-width: 768px) {
